kic-gateway-api/kubernetes/03_httproute/03_httproute_host.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: back2future-host
spec:
  parentRefs:
    - name: kong
  hostnames:
    - "back2future.kongproxy.me"
  rules:
    - backendRefs:
        - name: back2future-quote-service
          port: 8080
